<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignupActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_desc"
        android:src="@drawable/icon" />


    <TextView
        android:id="@+id/disp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/disp_text1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="monospace"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/phoneno"
        android:drawablePadding="10dp"
        android:hint="Phone no."
        android:inputType="phone"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#40BFFF"
        android:padding="18dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/redirect_text1"
        android:textColor="#40BFFF"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>

